Created landing page and updated gameboard

--- a/index.html
+++ b/index.html
@@ -2,125 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Memory</title>
+    <title>landing-page</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/mem.css">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald">
+    <link href='http://fonts.googleapis.com/css?family=Michroma' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="animate.min.css">
     <link href="https://fontastic.s3.amazonaws.com/uyTEju3s23kMYaNuGp6wzL/icons.css" rel="stylesheet">
   </head>
   <body>
-    <header>
-    </header>
-    <div class="gridbox">
-        <label class="memtile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">a</span>
-          </span>
-        </label>
-        <label class="memtile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">b</span>
-          </span>
-        </label>
-        <label class="memtile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">c</span>
-          </span>
-        </label>
-        <label class="memtile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">d</span>
-          </span>
-        </label>
-        <label class="memtile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">e</span>
-          </span>
-        </label>
-        <label class="memtile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">f</span>
-          </span>
-        </label>
-        <label class="memtile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">g</span>
-          </span>
-        </label>
-        <label class="memtile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">h</span>
-          </span>
-        </label>
-        <label class="memtile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">i</span>
-          </span>
-        </label>
-        <label class="memtile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">i</span>
-          </span>
-        </label>
-        <label class="memtile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">h</span>
-          </span>
-        </label>
-        <label class="memtile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">g</span>
-          </span>
-        </label>
-        <label class="memtile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">f</span>
-          </span>
-        </label>
-        <label class="memtile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">e</span>
-          </span>
-        </label>
-        <label class="memtile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">d</span>
-          </span>
-        </label>
-        <label class="memtile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">c</span>
-          </span>
-        </label>
-        <label class="memtile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">b</span>
-          </span>
-        </label>
-        <label class="memtile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">a</span>
-          </span>
-        </label>
+    <div class="landing-box">
+      <div class="welcome-box">
+        <h>Mem<span class="logo">c</span>ry</h>
+        <p>New Game</p>
+        <a class="easy" href="gameboard.html">Easy</a>
+        <a class="hard" href="gameboard.html">Hard</a>
+      </div>
     </div>
   </body>
 </html>
